--- a/index.html
+++ b/index.html
@@ -6,11 +6,20 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Bootstrap CSS -->
-    <link href = "https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-         rel = "stylesheet">
+ 
   <link href = "https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.css" rel = "stylesheet">
-  <link href = "https://cdn.datatables.net/1.10.20/css/dataTables.bootstrap4.min.css" rel = "stylesheet">
-  <link href = "https://cdn.datatables.net/responsive/2.2.3/css/responsive.bootstrap4.min.css" rel = "stylesheet">
+      
+  <!-- mystyle -->
+  <link href = "plugins/fontawesome.css" rel = "stylesheet">
+   <link href = "plugins/ionicon.css" rel = "stylesheet">
+     <link href = "plugins/adminlte.css" rel = "stylesheet">
+       <link href = "plugins/allskin.css" rel = "stylesheet">
+  
+
+ 
+   <!-- Google Font -->
+  <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
   
      <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
@@ -28,9 +37,9 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/vfs_fonts.js"></script>
 <script src="https://cdn.datatables.net/buttons/1.6.1/js/buttons.html5.min.js"></script>
 <script src="https://cdn.datatables.net/buttons/1.6.1/js/buttons.print.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.20/jquery.datetimepicker.min.js"></script>
- <link href = "https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.20/jquery.datetimepicker.min.css" rel = "stylesheet">
-
+<script src="./plugins/fastclick.js"></script>
+<script src="./plugins/adminlte.js"></script>
+<script src="./plugins/demo.js"></script>
 
 
 
@@ -46,7 +55,6 @@
   <body style="position:relative">
 
     <div id="root">
-       <script src='https://kit.fontawesome.com/a076d05399.js'></script>
     </div>
     
 
